<resources>
    <string name="app_name">An About Me</string>
    <string name="name">Maggie the Pitbull</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Maggie is a cute and little pitbull which fur color is black and white.\nWhen she smiles she brightens everyone\'s day, and when her eyes meet yours she is sure to melt your heart and so the heart of the toughest.\nActually, she is around the age of three and is as muscular as any other pitbull, around 34 pounds of weight and due to that she can not jump so high.\nThe most remarkable feat about her is that no matter what she does, she gets to get away with almost everything due to her cuteness. 🥰</string>
    <string name="camera">White camera</string>
    <string name="whats_your_nickname">What\'s your nickname?</string>
    <string name="done">Done</string>
    <string name="small_test_text">Some test text</string>
</resources>